--- a/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
@@ -1,47 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="ancorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DipendentiViewController">
-   <children>
-      <TableView fx:id="tableView" layoutX="15.0" layoutY="117.0" prefHeight="294.0" prefWidth="563.0" styleClass="table-view" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="117.0">
-        <columns>
-          <TableColumn fx:id="usernameCol" prefWidth="75.0" text="Username" />
-          <TableColumn fx:id="nameCol" prefWidth="75.0" text="Nome" />
-            <TableColumn fx:id="lastNameCol" prefWidth="75.0" text="Cognome" />
-            <TableColumn fx:id="roleCol" prefWidth="75.0" text="Ruolo" />
-            <TableColumn fx:id="salaryCol" prefWidth="75.0" text="Stipendio" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <HBox layoutX="14.0" layoutY="60.0" spacing="4.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="60.0">
-         <children>
-            <Button fx:id="removeButton" cancelButton="true" mnemonicParsing="false" onAction="#actionRemoveButton" styleClass="secondaryButton" text="Rimuovi" />
-            <Button fx:id="editButton" mnemonicParsing="false" onAction="#actionEditButton" styleClass="secondaryButton" text="Modifica" />
-            <Button fx:id="addButton" defaultButton="true" mnemonicParsing="false" onAction="#actionAddButton" styleClass="secondaryButton" text="Aggiungi" />
-         </children>
-      </HBox>
-      <Label fx:id="labelDipendenti" layoutX="19.0" layoutY="8.0" prefHeight="43.0" prefWidth="563.0" text="Dipendenti" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="8.0">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Label>
-      <HBox fx:id="search_hbox" alignment="BASELINE_CENTER" layoutX="265.0" layoutY="18.0" spacing="4.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="18.0">
-         <children>
-            <ComboBox fx:id="filtroBox" onAction="#actionFiltroBox" promptText="Filtra" styleClass="secondaryButton" />
-            <TextField fx:id="cercaField" promptText="cerca" styleClass="searchField" />
-            <Button fx:id="searchButton" defaultButton="true" maxHeight="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#actionSearchButton" styleClass="secondaryButton" text="Cerca" />
-         </children>
-      </HBox>
-   </children>
+    <children>
+        <HBox layoutX="14.0" layoutY="60.0" spacing="4.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="60.0">
+            <children>
+                <Button fx:id="removeButton" cancelButton="true" mnemonicParsing="false" onAction="#actionRemoveButton" styleClass="secondaryButton" text="Rimuovi" />
+                <Button fx:id="editButton" mnemonicParsing="false" onAction="#actionEditButton" styleClass="secondaryButton" text="Modifica" />
+                <Button fx:id="addButton" defaultButton="true" mnemonicParsing="false" onAction="#actionAddButton" styleClass="secondaryButton" text="Aggiungi" />
+            </children>
+        </HBox>
+        <Label fx:id="labelDipendenti" layoutX="19.0" layoutY="8.0" prefHeight="43.0" prefWidth="563.0" text="Dipendenti" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="8.0">
+            <font>
+                <Font size="28.0" />
+            </font>
+        </Label>
+        <HBox fx:id="search_hbox" alignment="BASELINE_CENTER" layoutX="265.0" layoutY="18.0" spacing="4.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="18.0">
+            <children>
+                <ComboBox fx:id="filtroBox" onAction="#actionFiltroBox" promptText="Filtra" styleClass="secondaryButton" />
+                <TextField fx:id="cercaField" promptText="cerca" styleClass="searchField" />
+                <Button fx:id="searchButton" defaultButton="true" maxHeight="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#actionSearchButton" styleClass="secondaryButton" text="Cerca" />
+            </children>
+        </HBox>
+        <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" layoutX="15.0" layoutY="122.0" pannable="true" styleClass="vbox-info" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="122.0">
+            <content>
+                <VBox fx:id="vboxEsterno" alignment="TOP_CENTER" prefHeight="294.0" prefWidth="563.0" styleClass="vbox-info">
+                    <opaqueInsets>
+                        <Insets bottom="5.0" top="5.0" />
+                    </opaqueInsets>
+                    <padding>
+                        <Insets bottom="15.0" />
+                    </padding></VBox>
+            </content>
+            <opaqueInsets>
+                <Insets bottom="5.0" top="5.0" />
+            </opaqueInsets>
+        </ScrollPane>
+    </children>
 </AnchorPane>
