--- a/src/main/resources/com/calendly/calendly/css/light.css
+++ b/src/main/resources/com/calendly/calendly/css/light.css
@@ -22,7 +22,7 @@
     fifthBackgroundColor:     systemGray2;
     sixthBackgroundColor:     systemGray;
 
-    primaryTextColor: white;
+    primaryTextColor: black;
 
     primaryBackgroundButtonColor: systemBlue;
     primaryOnHoverButtonColor:    blueLight;
