--- a/src/main/resources/com/calendly/calendly/css/light.css
+++ b/src/main/resources/com/calendly/calendly/css/light.css
@@ -22,7 +22,7 @@
     fifthBackgroundColor:     systemGray2;
     sixthBackgroundColor:     systemGray;
 
-    primaryTextColor: black;
+    primaryTextColor: #0E0E0E;
 
     primaryBackgroundButtonColor: systemBlue;
     primaryOnHoverButtonColor:    blueLight;
