--- a/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -12,19 +13,20 @@
    <children>
       <AnchorPane layoutX="18.0" layoutY="5.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="645.0" prefWidth="630.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="12.0">
          <children>
-            <ComboBox fx:id="temiComboBox" layoutX="500.0" layoutY="142.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" visibleRowCount="5" AnchorPane.rightAnchor="-2.0" />
+            <ComboBox fx:id="temiComboBox" layoutX="500.0" layoutY="142.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" visibleRowCount="5" AnchorPane.rightAnchor="0.0" />
             <AnchorPane layoutX="281.0" layoutY="606.0" prefHeight="25.0" prefWidth="351.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
             <CheckBox fx:id="checkDislessia" layoutX="593.0" layoutY="262.0" mnemonicParsing="false" onAction="#attivaDislessia" AnchorPane.rightAnchor="19.0" />
             <HBox layoutX="407.0" layoutY="426.0" AnchorPane.rightAnchor="15.0" />
-            <Label fx:id="labelDislessia" layoutX="11.0" layoutY="214.0" prefHeight="21.0" prefWidth="704.0" text="Carattere per la dislessia" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
+            <Label fx:id="labelDislessia" layoutX="11.0" layoutY="216.0" prefHeight="21.0" prefWidth="704.0" text="Carattere per la dislessia" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
                <font>
                   <Font size="28.0" />
                </font>
             </Label>
-            <Text fx:id="txtDislessia" layoutX="14.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carattere adatto per le persone con dislessia. Basta attivare la spunta di fianco." wrappingWidth="618.0">
+            <Text fx:id="txtDislessia" layoutX="21.0" layoutY="276.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carattere adatto per le persone con dislessia." wrappingWidth="618.0">
                <font>
                   <Font size="14.0" />
-               </font></Text>
+               </font>
+            </Text>
             <Label fx:id="labelTemi" layoutX="11.0" layoutY="96.0" prefHeight="21.0" prefWidth="879.0" text="Scegli il tema dell'app" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
                <font>
                   <Font size="28.0" />
@@ -33,12 +35,24 @@
             <Text fx:id="txtTemi" layoutX="14.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ti permette di scegliere tra i temi dell'app." wrappingWidth="618.0">
                <font>
                   <Font size="14.0" />
-               </font></Text>
+               </font>
+            </Text>
             <Label fx:id="labelImpostazioni" layoutX="11.0" layoutY="14.0" prefHeight="35.0" prefWidth="438.0" text="Impostazioni" AnchorPane.leftAnchor="11.0">
                <font>
                   <Font size="28.0" />
                </font>
             </Label>
+            <Label fx:id="labelBackup" layoutX="11.0" layoutY="323.0" prefHeight="21.0" prefWidth="704.0" text="Salva dati">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
+            <Button fx:id="salvaButton" defaultButton="true" layoutX="575.0" layoutY="374.0" mnemonicParsing="false" onAction="#salva" styleClass="secondaryButton" text="Salva" AnchorPane.rightAnchor="1.0" />
+            <Text fx:id="txtBackup" layoutX="21.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Crea un backup della base di dati" wrappingWidth="618.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
          </children>
       </AnchorPane>
    </children>
