Gestione card + database

--- a/src/main/resources/com/calendly/calendly/css/style.css
+++ b/src/main/resources/com/calendly/calendly/css/style.css
@@ -295,3 +295,8 @@
     -fx-background-color: transparent;
 }
 
+.text-ellipsis {
+    -fx-ellipsis-string: "...";
+    -fx-ellipsis-truncate: true;
+}
+
