--- a/src/main/resources/com/calendly/calendly/css/blu.css
+++ b/src/main/resources/com/calendly/calendly/css/blu.css
@@ -4,7 +4,7 @@
     systemGray5: #00058f;
     systemGray4: #000667;
     systemGray3: #020391;
-    systemGray2: #0203ff;
+    systemGray2: #0040dd;
     systemGray:  #013298;
 
     systemBlue:  #0a84ff;
