Aggiornamenti vari pt.7

--- a/src/main/resources/com/calendly/calendly/css/blu.css
+++ b/src/main/resources/com/calendly/calendly/css/blu.css
@@ -1,10 +1,10 @@
 * {
 
-    systemGray6: #000a4e;
-    systemGray5: #00058f;
-    systemGray4: #000667;
-    systemGray3: #020391;
-    systemGray2: #0040dd;
+    systemGray6: #00033b;
+    systemGray5: #060d4a;
+    systemGray4: #161f6e;
+    systemGray3: #283680;
+    systemGray2: #0c1e78;
     systemGray:  #013298;
 
     systemBlue:  #0a84ff;
