--- a/src/main/resources/com/calendly/calendly/fxml/DashboardView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/DashboardView.fxml
@@ -8,15 +8,16 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="596.0" prefWidth="773.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DashboardController">
+<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="596.0" prefWidth="717.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DashboardController">
    <children>
-      <Label fx:id="labelDashboard" layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="364.0" text="Dashboard" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0">
+      <Label fx:id="labelDashboard" layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="364.0" text="Dashboard" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <TableView fx:id="tableGiornliera" editable="true" layoutX="14.0" layoutY="319.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="263.0" prefWidth="392.0" styleClass="container-level-2" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="323.0">
+      <TableView fx:id="tableGiornliera" editable="true" layoutX="14.0" layoutY="319.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="263.0" prefWidth="756.0" styleClass="container-level-2" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="323.0">
          <columns>
             <TableColumn fx:id="colonnaId" prefWidth="42.5" text="Id" />
             <TableColumn fx:id="colonnaEmail" prefWidth="112.0" text="Email" />
@@ -39,5 +40,10 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </BarChart>
+      <Text fx:id="txtDashboard" layoutX="246.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="Numero degli appuntamenti giornalieri. Sotto le loro descrizioni." wrappingWidth="516.0" AnchorPane.leftAnchor="240.0" AnchorPane.topAnchor="70.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
