--- a/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
@@ -9,51 +9,46 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.ImpostazioniController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="652.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.ImpostazioniController">
    <children>
-      <AnchorPane layoutX="18.0" layoutY="5.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="645.0" prefWidth="630.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="12.0">
-         <children>
-            <ComboBox fx:id="temiComboBox" layoutX="500.0" layoutY="142.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" visibleRowCount="5" AnchorPane.rightAnchor="0.0" />
-            <AnchorPane layoutX="281.0" layoutY="606.0" prefHeight="25.0" prefWidth="351.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-            <CheckBox fx:id="checkDislessia" layoutX="593.0" layoutY="262.0" mnemonicParsing="false" onAction="#attivaDislessia" AnchorPane.rightAnchor="19.0" />
-            <HBox layoutX="407.0" layoutY="426.0" AnchorPane.rightAnchor="15.0" />
-            <Label fx:id="labelDislessia" layoutX="11.0" layoutY="216.0" prefHeight="21.0" prefWidth="704.0" text="Carattere per la dislessia" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
-               <font>
-                  <Font size="28.0" />
-               </font>
-            </Label>
-            <Text fx:id="txtDislessia" layoutX="21.0" layoutY="276.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carattere adatto per le persone con dislessia." wrappingWidth="618.0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
-            <Label fx:id="labelTemi" layoutX="11.0" layoutY="96.0" prefHeight="21.0" prefWidth="879.0" text="Scegli il tema dell'app" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
-               <font>
-                  <Font size="28.0" />
-               </font>
-            </Label>
-            <Text fx:id="txtTemi" layoutX="14.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ti permette di scegliere tra i temi dell'app." wrappingWidth="618.0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
-            <Label fx:id="labelImpostazioni" layoutX="11.0" layoutY="14.0" prefHeight="35.0" prefWidth="438.0" text="Impostazioni" AnchorPane.leftAnchor="11.0">
-               <font>
-                  <Font size="28.0" />
-               </font>
-            </Label>
-            <Label fx:id="labelRipristina" layoutX="11.0" layoutY="323.0" prefHeight="21.0" prefWidth="704.0" text="Ripristina dati">
-               <font>
-                  <Font size="28.0" />
-               </font>
-            </Label>
-            <Button fx:id="ripristinaButton" defaultButton="true" layoutX="575.0" layoutY="374.0" mnemonicParsing="false" onAction="#ripristina" styleClass="secondaryButton" text="Ripristina" AnchorPane.rightAnchor="1.0" />
-            <Text fx:id="txtRipristina" layoutX="21.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rimuovi tutti i dati presenti" wrappingWidth="618.0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
-         </children>
-      </AnchorPane>
+      <ComboBox fx:id="temiComboBox" layoutX="500.0" layoutY="130.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" visibleRowCount="5" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="145.0" />
+      <CheckBox fx:id="checkDislessia" layoutX="614.0" layoutY="256.0" mnemonicParsing="false" onAction="#attivaDislessia" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="250.0" />
+      <HBox layoutX="633.0" layoutY="431.0" AnchorPane.rightAnchor="15.0" />
+      <Label fx:id="labelDislessia" layoutX="10.0" layoutY="200.0" prefHeight="35.0" prefWidth="373.0" text="Carattere per la dislessia" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="277.0" AnchorPane.topAnchor="200.0">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Text fx:id="txtDislessia" layoutX="25.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="Carattere adatto per le persone con dislessia." wrappingWidth="618.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="250.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
+      <Label fx:id="labelTemi" layoutX="10.0" layoutY="100.0" prefHeight="35.0" prefWidth="333.0" text="Scegli il tema dell'app" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="317.0" AnchorPane.topAnchor="100.0">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Text fx:id="txtTemi" layoutX="25.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="Ti permette di scegliere tra i temi dell'app." wrappingWidth="618.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="150.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
+      <Label fx:id="labelImpostazioni" layoutX="28.0" layoutY="19.0" prefHeight="35.0" prefWidth="438.0" text="Impostazioni" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelRipristina" layoutX="10.0" layoutY="330.0" prefHeight="35.0" prefWidth="217.0" text="Ripristina dati" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="300.0">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Button fx:id="ripristinaButton" defaultButton="true" layoutX="552.0" layoutY="346.0" mnemonicParsing="false" onAction="#ripristina" styleClass="secondaryButton" text="Ripristina" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="346.0" />
+      <Text fx:id="txtRipristina" layoutX="25.0" layoutY="385.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="Rimuovi tutti i dati presenti" wrappingWidth="618.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="350.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
