--- a/src/main/resources/com/calendly/calendly/fxml/StatisticheView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/StatisticheView.fxml
@@ -10,13 +10,13 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.StatisticheController">
    <children>
-      <VBox layoutX="267.0" layoutY="182.0" prefHeight="649.0" prefWidth="660.0" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Label fx:id="labelStatistiche" prefHeight="35.0" prefWidth="642.0" text="Statistiche" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <VBox layoutX="267.0" layoutY="48.0" prefHeight="601.0" prefWidth="660.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
          <children>
-            <Label fx:id="labelStatistiche" prefHeight="35.0" prefWidth="642.0" text="Statistiche">
-               <font>
-                  <Font size="28.0" />
-               </font>
-            </Label>
             <BarChart fx:id="chartSettimanale" prefHeight="280.0" prefWidth="660.0" title="Settimanale">
                <xAxis>
                   <CategoryAxis label="Giorni" side="BOTTOM" />
