--- a/src/main/resources/com/calendly/calendly/fxml/ClientiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ClientiView.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="460.0" prefWidth="611.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.ClientiController">
    <children>
-      <HBox layoutX="353.0" layoutY="20.0" spacing="10.0" AnchorPane.rightAnchor="10.0">
+      <HBox layoutX="353.0" layoutY="20.0" spacing="10.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="75.0">
          <children>
             <Button fx:id="removeButton" defaultButton="true" mnemonicParsing="false" onAction="#actionRimuoviCliente" styleClass="secondaryButton" text="Rimuovi" />
             <Button fx:id="editButton" mnemonicParsing="false" onAction="#actionModificaCliente" styleClass="secondaryButton" text="Modifica" />
@@ -25,7 +25,7 @@
             <Font size="27.0" />
          </font>
       </Label>
-      <HBox layoutX="21.0" layoutY="76.0" spacing="10.0" AnchorPane.leftAnchor="21.0">
+      <HBox layoutX="21.0" layoutY="76.0" prefHeight="25.0" prefWidth="298.0" spacing="15.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="75.0">
          <children>
             <ComboBox fx:id="filtro" onAction="#actionFiltro" prefHeight="25.0" prefWidth="84.0" promptText="Filtro" />
             <TextField fx:id="field" prefHeight="24.0" prefWidth="127.0" promptText="Cerca" styleClass="searchField" />
