--- a/src/main/resources/com/calendly/calendly/fxml/ClientiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ClientiView.fxml
@@ -39,7 +39,7 @@
             <Insets bottom="5.0" top="5.0" />
          </opaqueInsets>
       </ScrollPane>
-      <HBox fx:id="searchHbox" alignment="BASELINE_CENTER" layoutX="25.0" layoutY="78.0" spacing="4.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="75.0">
+      <HBox fx:id="search_hbox" alignment="BASELINE_CENTER" layoutX="35.0" layoutY="88.0" spacing="4.0">
          <children>
             <ComboBox fx:id="filtro" prefHeight="25.0" prefWidth="84.0" promptText="Filtro" />
             <TextField fx:id="field" prefHeight="24.0" prefWidth="127.0" promptText="Cerca" styleClass="searchField" />
