--- a/src/main/resources/com/calendly/calendly/fxml/HomeView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/HomeView.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="anchorPaneParent" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0" minWidth="950.0" prefHeight="700.0" prefWidth="950.0" scaleShape="false" styleClass="external-pane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.HomeController">
    <children>
@@ -15,6 +18,57 @@
                </children>
             </AnchorPane>
          </children></VBox>
-      <Pane fx:id="viewPane" layoutX="183.0" layoutY="14.0" prefHeight="680.0" prefWidth="757.0" styleClass="primary-app-view" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="183.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+      <Pane fx:id="viewPane" layoutX="183.0" layoutY="14.0" prefHeight="680.0" prefWidth="757.0" styleClass="primary-app-view" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="183.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <children>
+            <Label fx:id="labelInfo" layoutX="14.0" layoutY="14.0" prefHeight="34.0" prefWidth="364.0" text="Benvenuto su Calendly">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
+            <VBox layoutX="42.0" layoutY="71.0" prefHeight="239.0" prefWidth="637.0" spacing="10.0">
+               <children>
+                  <Text fx:id="txtInfo" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="Il gestore di appuntamenti a portata di click." wrappingWidth="644.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="txtInfo1" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="Qui sotto trovi una guida all'uso." wrappingWidth="640.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="txtInfo2" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="- Dashboard: riporta l'andamento giornaliero dei tuoi appuntamenti;" wrappingWidth="643.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="txtInfo3" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="- Appuntamenti:  tutti gli appuntamenti;" wrappingWidth="645.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="txtInfo4" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="- Clienti: gestisce l'elenco dei clienti;" wrappingWidth="639.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="txtInfo5" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="- Servizi: regola i servizi che offri;" wrappingWidth="639.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="txtInfo6" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="- Dipendenti: permette la gestione dei tuoi dipendenti;" wrappingWidth="638.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="txtInfo7" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="- Impostazioni: consente piccole modifiche al programma;" wrappingWidth="635.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </VBox>
+         </children></Pane>
    </children>
 </AnchorPane>
