--- a/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
@@ -50,5 +50,16 @@
             <Font size="14.0" />
          </font>
       </Text>
+      <CheckBox fx:id="checkNotifica" layoutX="622.0" layoutY="450.0" mnemonicParsing="false" onAction="#attivaNotifica" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="450.0" />
+      <Label fx:id="labelNotifica" layoutX="18.0" layoutY="394.0" prefHeight="35.0" prefWidth="373.0" text="Notifica giornaliera" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="400.0">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Text fx:id="txtNotifica" layoutX="33.0" layoutY="464.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt" text="Permette di attiva o disattivare la notifica giornaliera." wrappingWidth="618.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="450.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
