--- a/src/main/resources/com/calendly/calendly/fxml/ClientiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ClientiView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="460.0" prefWidth="611.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.ClientiController">
+<AnchorPane fx:id="anchorPane" cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="460.0" prefWidth="611.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.ClientiController">
    <children>
       <HBox layoutX="353.0" layoutY="20.0" spacing="10.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="75.0">
          <children>
