Modifiche dialog / servizi / dipendenti / clienti

--- a/src/main/resources/com/calendly/calendly/css/style.css
+++ b/src/main/resources/com/calendly/calendly/css/style.css
@@ -324,3 +324,9 @@
 .alert:header *.header-panel{
     -fx-background-color: secondaryBackgroundColor;
 }
+
+
+.rimuoviButton {
+    -fx-background-color: secondaryBackgroundColor;
+    -fx-text-fill: systemRed;
+}
