Modifiche dialog / servizi / dipendenti / clienti

--- a/src/main/resources/com/calendly/calendly/css/style.css
+++ b/src/main/resources/com/calendly/calendly/css/style.css
@@ -330,3 +330,10 @@
     -fx-background-color: secondaryBackgroundColor;
     -fx-text-fill: systemRed;
 }
+
+.rimuoviButton:hover {
+    -fx-background-color: thirdBackgroundColor;
+    -fx-text-fill: systemRed;
+}
+
+
