--- a/src/main/resources/com/calendly/calendly/fxml/ServiziView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ServiziView.fxml
@@ -25,7 +25,7 @@
       </Label>
       <HBox fx:id="search_hbox" alignment="BASELINE_CENTER" layoutX="14.0" layoutY="80.0" spacing="4.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="75.0">
          <children>
-            <ComboBox fx:id="filtroBox" onAction="#actionFiltroBox" promptText="Filtra" styleClass="secondaryButton" />
+            <ComboBox fx:id="filtroBox" promptText="Filtra" styleClass="secondaryButton" />
             <TextField fx:id="cercaField" promptText="cerca" styleClass="searchField" />
             <Button fx:id="searchButton" defaultButton="true" maxHeight="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#actionSearchButton" styleClass="secondaryButton" text="Cerca" />
          </children>
